--- a/src/Components/FeedbackOptions/FeedbackOptions.module.css
+++ b/src/Components/FeedbackOptions/FeedbackOptions.module.css
@@ -5,3 +5,10 @@
   border-color: #392bff34;
   cursor: pointer;
 }
+.buttonList {
+  display: flex;
+  list-style: none;
+  justify-content: center;
+  margin: 0;
+  padding: 0;
+}
